# WINE-anti-cheat

./: CMakeLists.txt  README.md
source/: dllmain.cpp  includes.hpp
source/detection/: detection.hpp
source/detection/handler/: detection_manager.cpp  detection_manager.hpp
source/detection/mouse/: auto_clicker.cpp  auto_clicker.hpp
source/util/: values.cpp  values.hpp
source/wine/: wine.cpp  wine.hpp  wine_report.hpp
